# QAHelper

./: .gitignore  CI_CD_README.md  DockerFile.agent  Dockerfile  GUARDRAIL_IMPROVEMENTS.md  INTEGRATION_SUMMARY.md  LLAMAINDEX_SETUP.md  RAG_POSTGRESQL_README.md  README.txt  app.py  config.env.example  cursor-info.md  cursor-rules.json  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prueba_gemini.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_excel_generation.py  test_graph_integration.py  test_rag_database.py  test_tech_connection.py
.github/workflows/: ci-cd-pipeline.yml
agent_servers/: client_mcp_YT.py  email_server.py  output.xlsx  rag_server.py  sentiment_server.py  tech_server.py
agent_servers/utils/: mcp_dynamic_adapter.py
backend/: Dockerfile  celery_config.py  main.py  tasks.py
backend/agents/: email_agent.py  rag_agent.py  sentiment_agent.py  tech_agent.py  test_agent.py
backend/api/: README.md  chat_routes.py  files_routes.py  s3_routes.py
backend/models/: api.py  db.py
backend/moderation/: guardrail.py  guardrail2.py  guardrail3.py  prueba.py  toxic_guardrail.py
backend/supervisor/: README_SUPERVISOR.md  agent_supervisor.py  graph_builder.py  routing_llm.py  test_supervisor_architecture.py
backend/utils/: db_actions.py  db_chat_history.py  db_connection.py  db_create.py  init_db.py  llamaindex_utils.py  s3_utils.py
output/: output.xlsx
storage/: faq_20250816143657.txt  faq_20250816144803.txt  faq_20250816160213.txt  faq_20250817_101617.txt
tests/: __init__.py  test_supervisor_architecture.py  test_unit.py
